# cravebot

./: .replit  DEPLOYMENT_FIXES_COMPLETE.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile  Procfile  TESTING_DEPLOYMENT_GUIDE.md  TESTING_INSTRUCTIONS.md  TEST_CHECKLIST.md  __init__.py  app.py  app.yaml  auto_deploy.py  bot_handlers.py  cloudbuild.yaml  config.py  cravebreaker.db  database.py  deploy_bot.py  deploy_instructions.html  deployment.yaml  deployment_validation.py  deployment_validation_results.json  gamification.py  gunicorn.conf.py  interventions.py  main.py  motivation_quotes.py  motivation_quotes_fix.py  pyproject.toml  railway.json  render.yaml  replit.md  replit_deploy.toml  requirements.txt  run.py  run.sh  simple_bot.py  start.py  (+8 more)
