[project]
name = "cravebreaker-telegram-bot"
version = "1.0.0"
description = "CraveBreaker Telegram Bot for habit management and impulse control"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "flask>=3.1.1",
    "httpx>=0.28.1",
    "python-telegram-bot>=22.3",
    "telegram>=0.0.1",
    "openai",
    "gunicorn",
]

[project.scripts]
start = "main:main"

[tool.replit]
run = "python main.py"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
